# app/Modules/IAM/Routes/auth.php
@@ -11,3 +11,4 @@ use Illuminate\Support\Facades\Route;
 |--------------------------------------------------------------------------
 */
 Route::post('login', [AuthController::class, 'login']);
+Route::post('logout', [AuthController::class, 'logout'])->middleware('api', 'auth:sanctum');
