# storage/api-docs/api-docs.json
@@ -99,7 +99,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
                     },
                     "422": {
                         "description": "Validation Error"
@@ -128,7 +128,7 @@
                         "description": "Office created successfully"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
                     },
                     "422": {
                         "description": "Validation Error"
@@ -162,6 +162,32 @@
                                 }
                             }
                         }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "tags": [
+                    "Authorization"
+                ],
+                "description": "Logout user",
+                "operationId": "logout",
+                "responses": {
+                    "200": {
+                        "description": "User logged out successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Validation Error"
                     }
                 }
             }
@@ -251,7 +277,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
                     },
                     "422": {
                         "description": "Validation Error"
